--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@ UEFA Europa League: Servette vs Utrecht
 Amistoso con el club: Al-Nassr vs Rio Ave
 <span class="t">19:30</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL10" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
@@ -1435,7 +1435,7 @@ Amistoso con el club: Al-Nassr vs Rio Ave
 Liga de Conferencias de la UEFA: Lugano vs Celje
 <span class="t">20:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL11" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
@@ -1446,7 +1446,7 @@ Liga de Conferencias de la UEFA: Lugano vs Celje
 Liga de Conferencias de la UEFA: Raków Czecestochowa vs Maccabi Haifa
 <span class="t">20:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL12" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
@@ -1457,7 +1457,7 @@ Liga de Conferencias de la UEFA: Raków Czecestochowa vs Maccabi Haifa
 Liga de Conferencias de la UEFA: Partizan vs Hibernian
 <span class="t">20:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL13" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
