--- a/index.html
+++ b/index.html
@@ -1463,14 +1463,7 @@ Liga de Conferencias de la UEFA: Partizan vs Hibernian
 </li>
 
 
-<li class="UEC"><a href="#">
-Liga de Conferencia de la UEFA: Larne vs Santa Clara
-<span class="t">20:00</span></a>
-<ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
-</ul>
-</li>
+
 
 
 
@@ -1478,8 +1471,7 @@ Liga de Conferencia de la UEFA: Larne vs Santa Clara
 Inglaterra - Liga Uno: Port Vale vs Cardiff City
 <span class="t">20:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL14" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
