--- a/index.html
+++ b/index.html
@@ -1426,7 +1426,7 @@ Amistoso con el club: Al-Nassr vs Rio Ave
 <span class="t">19:30</span></a>
 <ul>
 <li class="subitem1"><a href="go:GOL10" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canales.php?stream=canal11_pt" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
