--- a/index.html
+++ b/index.html
@@ -1440,8 +1440,7 @@ Primera División: Godoy Cruz vs Gimnasia La Plata
 Primera División: San Lorenzo vs Vélez Sarsfield
 <span class="t">21:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a2879d84847a8597a48f9885867f.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1451,7 +1450,6 @@ WTA National Bank Open 2025: Victoria Mboko (CAN) vs. Naomi Osaka (JPN) | Final
 <span class="t">23:00</span></a>
 <ul>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espnmx" target="_blank">ESPN 1 MX<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zdHJlYW10cGdsb2JhbC5jb20vZ2xvYmFsMS5waHA/c3RyZWFtPWRpc25leTQ=" target="_blank">Disney+<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1461,8 +1459,7 @@ WTA National Bank Open 2025: Victoria Mboko (CAN) vs. Naomi Osaka (JPN) | Final
 Copa: Jaguares de Córdoba vs Independiente Medellín
 <span class="t">23:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a2879d84847a8597a49098858680.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1471,7 +1468,6 @@ Libobasquet : Nacional Potosí vs Pichincha Potosí
 <span class="t">24:00</span></a>
 <ul>
 <li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1481,8 +1477,7 @@ Libobasquet : Nacional Potosí vs Pichincha Potosí
 Primera A: Unión Magdalena vs Deportivo Pasto
 <span class="t">24:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a287a08a847a85959c899885877c.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1490,8 +1485,8 @@ Primera A: Unión Magdalena vs Deportivo Pasto
 Leagues Cup : Cincinanti  vs Chivas
 <span class="t">24:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a287a08a847a85959c8c9885877e.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a287a08a847a85959c8b9885877f.html" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1500,8 +1495,7 @@ Leagues Cup : Cincinanti  vs Chivas
 Copa de Brasil: Vasco da Gama vs CSA
 <span class="t">24:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a287a08a847a85959c8a9885877d.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1519,8 +1513,8 @@ ATP Cincinnati Open 2025: Primera Ronda
 Leagues Cup : Monterrey vs Charlotte
 <span class="t">24:30</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a287a288847a85959d8a9885887c.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a287a288847a85959d8b9885887d.html" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1529,8 +1523,8 @@ Leagues Cup : Monterrey vs Charlotte
 Leagues Cup : NY Red Bulls vs Juárez
 <span class="t">24:30</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a287a288847a85959d8d9885887e.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a287a288847a85959d8c9885887f.html" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1550,8 +1544,7 @@ ATP National Bank Open 2025: Karen Khachanov (RUS) vs. Ben Shelton (USA) | Final
  Primera División: Estudiantes vs Independiente Rivadavia
 <span class="t">01:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a2889a86847a85959d9098858881.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1560,8 +1553,8 @@ ATP National Bank Open 2025: Karen Khachanov (RUS) vs. Ben Shelton (USA) | Final
 Leagues Cup : Cruz Azul vs Colorado
 <span class="t">01:30</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a2889c84847a85959e8a9885897e.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a2889c84847a85959e8b9885897d.html" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1571,7 +1564,6 @@ Libobasquet : Leones de Potosí vs Universitario de Sucre
 <span class="t">01:30</span></a>
 <ul>
 <li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1591,8 +1583,8 @@ Primera A: Boyacá Chicó vs La Equidad
 CONCACAF: Managua vs Alajuelense
 <span class="t">03:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a288a188847a85959f8c98858a7a.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a288a188847a85959f8d98858a7b.html" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1600,8 +1592,8 @@ CONCACAF: Managua vs Alajuelense
 CONCACAF: CSD Municipal vs Sporting San Miguelito
 <span class="t">03:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a288a188847a85959f8a98858982.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a288a188847a85959f8b98858983.html" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1609,8 +1601,8 @@ CONCACAF: CSD Municipal vs Sporting San Miguelito
 Leagues Cup : LA Galaxy vs Santos
 <span class="t">04:35</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=disney1" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a2899d85847a8595a08898858a83.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a2899d85847a8595a08798858b7a.html" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
