--- a/index.html
+++ b/index.html
@@ -1337,7 +1337,8 @@ Copa: Jaguares de Córdoba vs Independiente Medellín
 Libobasquet : Nacional Potosí vs Pichincha Potosí
 <span class="t">24:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://deportesonplus.github.io/doplus-9/" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://deportesonplus.github.io/doplus-12/" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
