--- a/index.html
+++ b/index.html
@@ -1419,6 +1419,21 @@ ATP National Bank Open 2025: Karen Khachanov (RUS) vs. Ben Shelton (USA) | Final
 </li>
 
 
+
+
+<li class="BRA"><a href="#">
+Copa de Brasil : CRB vs Cruzeiro
+<span class="t">01:00</span></a>
+<ul>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a2889a86847a85959e8798858883.html" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+
+
+
+
+
 <li class="LC"><a href="#">
 Leagues Cup : Cruz Azul vs Colorado
 <span class="t">01:30</span></a>
