--- a/index.html
+++ b/index.html
@@ -1448,7 +1448,9 @@ Leagues Cup : Cruz Azul vs Colorado
 Libobasquet : Leones de Potosí vs Universitario de Sucre
 <span class="t">01:30</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://deportesonplus.github.io/doplus-7/" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
+
+<li class="subitem1"><a href="https://deportesonplus.github.io/doplus-4/" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
