--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" href="https://i.ibb.co/39mW1sjt/ON-PLUS2.png" type="image/x-icon">
         <script type="text/javascript" src="/agenda/smallscripts.js"></script>
-        <meta http-equiv="refresh" content="70">
+        <meta http-equiv="refresh" content="60">
         
         <meta http-equiv="cache-control" content="no-cache">
         <meta http-equiv="Pragma" content="no-cache">
@@ -1449,8 +1449,9 @@ Libobasquet : Leones de Potosí vs Universitario de Sucre
 <span class="t">01:30</span></a>
 <ul>
 <li class="subitem1"><a href="https://deportesonplus.github.io/doplus-7/" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-
 <li class="subitem1"><a href="https://deportesonplus.github.io/doplus-4/" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://deportesonplus.github.io/doplus-101/" target="_blank">Deportes On+ HD<span>Calidad 720p</span></a></li>
+
 </ul>
 </li>
 
