--- a/index.html
+++ b/index.html
@@ -1363,9 +1363,7 @@ Leagues Cup : Cruz Azul vs Colorado
 Libobasquet : Leones de Potosí vs Universitario de Sucre
 <span class="t">01:30</span></a>
 <ul>
-<li class="subitem1"><a href="https://deportesonplus.github.io/doplus-7/" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://deportesonplus.github.io/doplus-4/" target="_blank">Deportes On+ 2<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://deportesonplus.github.io/doplus-101/" target="_blank">Deportes On+ HD<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL1" target="_blank">Deportes On+<span>Calidad 720p</span></a></li>
 
 </ul>
 </li>
@@ -1716,6 +1714,7 @@ Leagues Cup : LA Galaxy vs Santos
 
 <script>
   var meses = new Array("Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre");
+
   var diasSemana = new Array("Domingo", "Lunes", "Martes", "Miércoles", "Jueves", "Viernes", "Sábado");
   var f = new Date();
   document.getElementById("getfecha").innerHTML = diasSemana[f.getDay()] + ", " + f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYear();
