--- a/index.html
+++ b/index.html
@@ -1314,7 +1314,7 @@ Amistosos: Monaco vs. Inter
 Amistosos: Chelsea vs. Bayer Leverkusen
 <span class="t">19:00</span></a>
 <ul>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9zcG9ydHpvbmxpbmUuc2kvY2hhbm5lbHMvcHQvc3BvcnR0djIucGhw" target="_blank">Sport TV2 PT<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL2" target="_blank">Sport TV2 PT<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1323,6 +1323,8 @@ Eredivisie: Fortuna Sittard vs. Go Ahead Eagles
 <span class="t">19:00</span></a>
 <ul>
 <li class="subitem1"><a href="https://streamtpglobal.com/global1.php?stream=espn_nl1" target="_blank">ESPN 1 NL<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a28e9f84847a8597a18a988b8a.html" target="_blank">Sport TV2 PT<span>Calidad 720p</span></a></li>
+
 </ul>
 </li>
 
