--- a/index.html
+++ b/index.html
@@ -1307,10 +1307,20 @@ Amistosos: Monaco vs. Inter
 <span class="t">19:00</span></a>
 <ul>
 <li class="subitem1"><a href="https://voodc.com/embed/85818b95a28e9f84847a8597a18e988c84.html" target="_blank">ESPN  Deportes<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="https://voodc.com/embed/85818b95a28e9f84847a8597a18e988c84.html" target="_blank">ESPN  Deportes<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a28ea08c847a8597a28e988d84.html" target="_blank">ESPN  Deportes<span>Calidad 720p</span></a></li>
 
 </ul>
 </li>
+
+<li class="FUT"><a href="#">
+Amistosos: Newcastel United vs. Espanyol
+<span class="t">19:30</span></a>
+<ul>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a28ea08c847a8597a28e988d84.html" target="_blank">ESPN  Deportes<span>Calidad 720p</span></a></li>
+
+</ul>
+</li>
+
 
 <li class="FUT"><a href="#">
 Amistosos: Chelsea vs. Bayer Leverkusen
@@ -1341,6 +1351,15 @@ Süper Lig: Gaziantep FK vs. Galatasaray
 </ul>
 </li>
 
+
+<li class="FUT"><a href="#">
+Amistosos: Newcastel United vs. Espanyol
+<span class="t">19:30</span></a>
+<ul>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a28ea08c847a8597a28e988d84.html" target="_blank">ESPN  Deportes<span>Calidad 720p</span></a></li>
+
+</ul>
+</li>
 
 <li class="BOL"><a href="#">
 División Porfesional : FC Universitario vs Oriente Petrolero
