--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,7 @@ Amistosos: Newcastel United vs. Espanyol
 División Porfesional : FC Universitario vs Oriente Petrolero
 <span class="t">20:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL3" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
