--- a/index.html
+++ b/index.html
@@ -1366,6 +1366,8 @@ División Porfesional : FC Universitario vs Oriente Petrolero
 <span class="t">20:00</span></a>
 <ul>
 <li class="subitem1"><a href="go:GOL3" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a28ea28a847a8597a3909885847e.html" target="_blank">Deportes On + 2<span>Calidad 720p</span></a></li>
+
 </ul>
 </li>
 
