--- a/index.html
+++ b/index.html
@@ -1387,7 +1387,7 @@ Primera División: Palestino vs. Deportes Iquique
 Primera División: 2 de Mayo vs. Sportivo Trinidense
 <span class="t">20:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Tigo Sports PY<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a28ea28a847a8597a48b98858483.html" target="_blank">Tigo Sports PY<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1420,7 +1420,7 @@ Liga 1: Comerciantes Unidos vs. Cienciano
 Liga BetPlay: Atlético Nacional vs. Alianza
 <span class="t">21:30</span></a>
 <ul>
-<li class="subitem1"><a href="/en-vivo/win-sports-premium/" target="_blank">Win+ Fútbol<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a28f9e84847a8597a5899885857e.html" target="_blank">Win+ Fútbol<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
