--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@ Liga Profesional: Tigre vs. Huracán
 División Porfesional : ABB vs Real Oruro 
 <span class="t">23:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a2909988847a85989c8a9885867c.html" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1455,7 +1455,7 @@ División Porfesional : ABB vs Real Oruro
 Primera División: Torque vs. Boston River
 <span class="t">23:00</span></a>
 <ul>
-<li class="subitem1"><a href="/en-vivo/vtv-plus/" target="_blank">VTV+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a2909988847a85989c8c9885867e.html" target="_blank">VTV+<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=goltv" target="_blank">GolTV<span>Calidad 720p</span></a></li>
 </ul>
 </li>
