--- a/index.html
+++ b/index.html
@@ -1396,7 +1396,7 @@ MLB: Chicago Cubs vs. St. Louis Cardinals
 Libobasquet :  Leones de Potosi vs. Nacional Potosi	 
 <span class="t">01:30</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL5" target="_blank">Deportes On +<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1404,7 +1404,7 @@ Libobasquet :  Leones de Potosi vs. Nacional Potosi
 Liga BetPlay: Millonarios vs. Deportivo Cali
 <span class="t">01:30</span></a>
 <ul>
-<li class="subitem1"><a href="/en-vivo/win-sports-premium/" target="_blank">Win+ Fútbol<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/1/85818b95a290a288847a8595a08c98858b7e.html" target="_blank">Win+ Fútbol<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
@@ -1412,8 +1412,8 @@ Liga BetPlay: Millonarios vs. Deportivo Cali
 Boxeo: Ricardo Salas vs. Jesús Mauricio Estrada | ESPN KO
 <span class="t">03:00</span></a>
 <ul>
-<li class="subitem1"><a href="/en-vivo/espn-2/" target="_blank">ESPN 2<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/espn-2-mx/" target="_blank">ESPN 2 MX<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espn2" target="_blank">ESPN 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espn2mx" target="_blank">ESPN 2 MX<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
