--- a/index.html
+++ b/index.html
@@ -1427,10 +1427,7 @@ Boxeo: Ricardo Salas vs. Jesús Mauricio Estrada | ESPN KO
 Liga MX: Tigres vs. Puebla
 <span class="t">04:00</span></a>
 <ul>
-<li class="subitem1"><a href="/en-vivo/fox-deportes/" target="_blank">FOX Deportes<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/caliente-tv/" target="_blank">Caliente TV<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/eventos/?r=aHR0cHM6Ly9sYTE0aGQuY29tL3Zpdm8vY2FuYWxlcy5waHA/c3RyZWFtPWF6dGVjYTc=" target="_blank">Azteca 7 MX<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/fs1/" target="_blank">FS1 USA<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="https://voodc.com/embed/85818b95a387a188847a8595a3899886847a.html" target="_blank">FOX Deportes<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
