--- a/index.html
+++ b/index.html
@@ -1453,6 +1453,21 @@ Liga 1: ADT vs. Sport Huancayo
 </ul>
 </li>
 
+
+
+<li class="BOL"><a href="#">
+División Profesional : Naccional Potosí vs. The Strongest 
+<span class="t">22:30</span></a>
+<ul>
+<li class="subitem1"><a href="go:GOL1" target="_blank">Deportes On + HD<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+
+
+
+
+
 <li class="AR"><a href="#">
 Liga Profesional: Independiente vs. River Plate
 <span class="t">22:30</span></a>
@@ -1520,6 +1535,23 @@ UFC: Roman Dolidze vs. Anthony Hernandez
 </ul>
 </li>
 
+
+
+
+
+
+
+<li class="BAS"><a href="#">
+Libobasquet-Final Fourt : Nacional Potosí vs. Universitario Sucre
+<span class="t">00:00</span></a>
+<ul>
+<li class="subitem1"><a href="go:GOL2" target="_blank">Deportes On + HD<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+
+
+
 <li class="PE"><a href="#">
 Liga 1: Universitario vs. Sport Boys
 <span class="t">00:30</span></a>
@@ -1527,6 +1559,7 @@ Liga 1: Universitario vs. Sport Boys
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=golperu" target="_blank">GOLPERU<span>Calidad 720p</span></a></li>
 </ul>
 </li>
+
 
 <li class="AR"><a href="#">
 Liga Profesional: Belgrano vs. Banfield
@@ -1536,6 +1569,8 @@ Liga Profesional: Belgrano vs. Banfield
 </ul>
 </li>
 
+
+
 <li class="AR"><a href="#">
 Liga Profesional: Atlético Tucumán vs. Rosario Central
 <span class="t">00:45</span></a>
@@ -1543,6 +1578,7 @@ Liga Profesional: Atlético Tucumán vs. Rosario Central
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=tntsports" target="_blank">TNT Sports Premium<span>Calidad 720p</span></a></li>
 </ul>
 </li>
+
 
 <li class="BRA"><a href="#">
 Brasileirão: Bahia vs. Fluminense
@@ -1559,6 +1595,25 @@ NFL: Kansas City Chiefs vs. Arizona Cardinals
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espnmx" target="_blank">ESPN 1 MX<span>Calidad 720p</span></a></li>
 </ul>
 </li>
+
+
+<li class="BOL"><a href="#">
+División Profesional : Bolívar vs. Real Tomayapo 
+<span class="t">01:00</span></a>
+<ul>
+<li class="subitem1"><a href="go:GOL3" target="_blank">Deportes On + HD<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+
+<li class="BAS"><a href="#">
+Libobasquet-Final Fourt : Leones de Potosí vs Pichincha Potosí
+<span class="t">01:30</span></a>
+<ul>
+<li class="subitem1"><a href="go:GOL4" target="_blank">Deportes On + HD<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
 
 
 <li class="COL"><a href="#">
