--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@ background-image: url(/agenda/cos.png);
 }
 
 .menu > li.NFL > a:before {
-    background-image: url(NFL.png);
+    background-image: url(https://tvlibreonline.org/agenda/NFL.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
