--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@ background-image: url(/agenda/cos.png);
 }
 
 .menu > li.NFL > a:before {
-    background-image: url(https://tvlibreonline.org/agenda/NFL.png);
+    background-image: url(https://i.ibb.co/B2FP7pNk/NFL.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -948,7 +948,7 @@ background-image: url(/agenda/cos.png);
         width: 0.6em !important;
         left: 45px;
     }
-    .menu > li.NHL,.WWE,.NBA, .NCAA,> a:before {
+    .menu > li.NHL,.WWE,.NBA, .NCAA, a:before {
         height: 1.0em; 
         width: 0.7em;
     }
@@ -1295,7 +1295,7 @@ ATP Cincinnati Open 2025: Segunda Ronda
 Amistosos: Newcastle United vs. Atlético Madrid
 <span class="t">16:00</span></a>
 <ul>
-<li class="subitem1"><a href="" target="_blank">Disney+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="go:GOL2" target="_blank">Deportes On + HD<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="https://la14hd.com/vivo/canal.php?stream=espnmx" target="_blank">ESPN 1 MX<span>Calidad 720p</span></a></li>
 </ul>
 </li>
